--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 
-<body>
+<body onload='loadWeather("Dhaka")'>
     <div class="container">
         <form class="col-md-6 m-auto py-5">
             <div class="input-group mb-3">
